--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "ios:release": "react-native run-ios --mode Release"
   },
   "dependencies": {
     "@react-navigation/elements": "^2.3.6",
